# cpp_rt

./: .gitignore  CMakeLists.txt  README.md  build.py  buildfile  manifest
clojure-pt/: CHANGELOG.md  README.md  project.clj
clojure-pt/doc/: intro.md
clojure-pt/src/clojure_pt/: core.clj
cpp/: .gitignore  README.md
cpp/cpp_pt/: buildfile  camera.hpp  camera.mpp  image.hpp  image.mpp  main  main.cpp  progress_keeper.hpp  progress_keeper.mpp  ray.hpp  scene.cpp  scene.hpp  scene.mpp
cpp/cpp_pt/details/: camera.cpp  camera.hpp  pixel.cpp  progress_keeper.cpp
cpp/cpp_pt/materials/: dielectric.hpp  diffuse.cpp  diffuse_light.cpp  material.hpp
cpp/cpp_pt/math/: details.hpp  ortho_normal_basis.cpp
cpp/cpp_pt/renderables/: sphere.hpp  sphere.mpp  triangle.cpp  triangle.hpp  triangle.mpp
cpp_pt/: buildfile  hit.hpp  hit_record.hpp  main  main.cpp  ray.cpp  scene.cpp
cpp_pt/details/: image.cpp  image.hpp  pixel.hpp  progress_keeper.cpp
cpp_pt/materials/: dielectric.cpp  diffuse.hpp  diffuse_light.hpp  metallic.cpp  metallic.hpp
cpp_pt/math/: ortho_nomal_basis.hpp  vec.cpp
go/: camera.go  go.mod  hit.go  image.go  main.go  pixel.go  ray.go  result.ppm
go-rt/: .gitignore  README.md  camera.go  go.mod  go.sum  main.go
go-rt/cmd/go-rt/: .gitignore  main.go
go-rt/core/: colour.go  image.go  pixel.go  ray.go  ray_hit.go  settings.go
go-rt/entities/: entity.go  sphere.go
go-rt/internal/: camera.go  colour.go  file.go  image.go  pixel.go  ray.go  time-boundary.go  trueColour.go
go-rt/internal/core/: ray.go
go-rt/internal/hitable/: hit-record.go  hitable.go  sphere.go  time-boundary.go
go-rt/internal/maths/: angles.go  clamp.go  max.go  min.go  point2.go  point3.go  quadratic-equation.go  quadratic-formula.go  schlick.go  size2.go  vec3-rand.go  vec3.go
go-rt/internal/render/: colour.go  image.go  pixel.go  trueColour.go
go-rt/internal/scene/: camera.go  image-render-config.go  scene.go
go-rt/internal/utils/: file.go  progress-tracker.go  time-boundary.go  worker-pool.go
go-rt/internal/world/: camera.go  image-render-config.go  scene.go
go-rt/internal/world/core/: ray-collision-data.go  ray.go
go-rt/internal/world/entt/: entity-intersect.go  entity.go  intersect-record.go  sphere.go
go-rt/internal/world/mats/: dielectric.go  lambertian.go  material.go  metal.go
go-rt/materials/: lambertian.go  material.go  metal.go
go-rt/maths/: utils.go  vec3.go
go-rt/renderable/: collision_record.go
go-rt/renderable/materials/: material.go
go/core/: image.go  pixel.go  settings.go
go/materials/: dielectric.go  diffuse.go  diffuse_light.go  material.go  metallic.go
go/math/: vec.go
go/maths/: extras.go  ortho_normal_basis.go  utils.go  vec.go  vec3.go
go/renderable/: renderable.go  sphere.go
go/renderables/: sphere.go  triangle.go
go/tracer/: hit.go  ray.go
include/: camera.hpp  hit.hpp  hit_record.hpp  image.hpp  pixel.hpp  ray.hpp  scene.hpp  settings.hpp  sphere.hpp
include/details/: camera.hpp  image.hpp  pixel.hpp  progress_keeper.hpp  settings.hpp
include/materials/: dielectric.hpp  diffuse.hpp  diffuse_light.hpp  lambertian.hpp  material.hpp  metal.hpp  metallic.hpp
include/math/: details.hpp  ortho_nomal_basis.hpp  vec.hpp
include/renderables/: triangle.hpp
source/: camera.cpp  image.cpp  main.cpp  pixel.cpp  ray.cpp  scene.cpp  sphere.cpp
source/details/: camera.cpp  image.cpp  pixel.cpp  progress_keeper.cpp
source/materials/: dielectric.cpp  diffuse.cpp  diffuse_light.cpp  lambertian.cpp  metal.cpp  metallic.cpp
source/math/: ortho_normal_basis.cpp  vec.cpp
source/renderables/: triangle.cpp
